RESOLVED FIXED120483
Pasteboard::writeSelection violates layering (first step, fixes it for Mac platform only)
https://bugs.webkit.org/show_bug.cgi?id=120483
Summary Pasteboard::writeSelection violates layering (first step, fixes it for Mac pl...
Darin Adler
Reported 2013-08-29 12:01:38 PDT
Pasteboard::writeSelection violates layering (first step, fixes it for Mac platform only)
Attachments
Patch (23.29 KB, patch)
2013-08-29 12:17 PDT, Darin Adler
andersca: review+
webkit-ews: commit-queue-
Darin Adler
Comment 1 2013-08-29 12:17:39 PDT
Darin Adler
Comment 2 2013-08-29 12:18:30 PDT
Didn’t put [Mac] on the title because it touches cross-platform files a lot even though the only benefit is on Mac.
Anders Carlsson
Comment 3 2013-08-29 12:21:18 PDT
Comment on attachment 210014 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=210014&action=review > Source/WebCore/editing/Editor.h:45 > class NSDictionary; Should make this an OBJC_CLASS while you’re here.
Early Warning System Bot
Comment 4 2013-08-29 12:26:26 PDT
Early Warning System Bot
Comment 5 2013-08-29 12:28:13 PDT
Darin Adler
Comment 6 2013-08-29 13:08:15 PDT
Note You need to log in before you can comment on or make changes to this bug.